# Notable_Take_Home

./: .gitignore  README.md  README.rst  pyproject.toml  run.sh
notable/: initial_data.py  insert_initial_data.py  main.py  prestart.py
notable/crud/: crud_utils.py
notable/db/: base.py  init.py  session.py
notable/models/: appointment.py
notable/schemas/: appointment.py  doctor.py
schemas/: doctor.py
tests/: test_notable_take_home.py
