[tool.poetry]
name = "Notable"
version = "0.1.0"
description = ""
authors = ["Samraaj Thackeray <samraajthackeray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
pydantic = "^1.9.1"
uvicorn = "^0.17.6"

[tool.poetry.scripts]
start = "notable.main:start"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
